ci(qlty): migrated from coveralls to qlty (#2933)
Using a workaround until qltysh/qlty-action#119 is addressed

--- a/.c8rc.json
+++ b/.c8rc.json
@@ -17,7 +17,15 @@
     ".js"
   ],
   "reporter": [
-    "json",
+    "lcovonly",
     "text-summary"
-  ]
+  ],
+  "reporterOptions": {
+    "lcov": {
+      "projectRoot": "../../"
+    },
+    "lcovonly": {
+      "projectRoot": "../../"
+    }
+  }
 }
