ci(renovate): corrected config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -131,7 +131,7 @@
         "/axios/",
         "/http-proxy-agent/",
         "/https-proxy-agent/",
-        "/lru-cache/",
+        "/lru-cache/"
       ]
     },
     {
