fix(mcp): first draft of project-related MCP capabilities

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -51,16 +51,20 @@
     "@modelcontextprotocol/sdk": "1.15.0",
     "@serenity-js/core": "workspace:*",
     "@serenity-js/playwright": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "axios": "1.11.0",
     "commander": "14.0.0",
+    "envinfo": "7.14.0",
     "playwright": "1.55.0",
     "tiny-types": "1.23.0",
     "zod": "3.25.76",
     "zod-to-json-schema": "3.24.6"
   },
   "devDependencies": {
+    "@integration/testing-tools": "workspace:*",
     "@serenity-js/assertions": "workspace:*",
     "@serenity-js/web": "workspace:*",
-    "@integration/testing-tools": "workspace:*",
+    "@types/envinfo": "7.8.4",
     "mocha": "11.7.1",
     "mocha-multi": "1.1.7",
     "typescript": "5.8.3"
